Suppressed warning for deprecated pyresample.image.ImageContainer

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/bilinear/__init__.py:50: UserWarning: XArray and/or zarr not found, XArrayBilinearResampler won't be available.\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/bilinear/__init__.py:50: UserWarning: XArray and/or zarr not found, XArrayBilinearResampler won't be available.\n",
       "  warnings.warn(\"XArray and/or zarr not found, XArrayBilinearResampler won't be available.\")\n"
      ]
     }
@@ -52,7 +52,7 @@
     "import xarray as xr\n",
     "import metpy\n",
     "import cartopy.crs as ccrs\n",
-    "from pyresample import image, geometry\n",
+    "from pyresample import geometry, bilinear, image\n",
     "import seaborn as sns #ref\n",
     "import netCDF4\n",
     "sns.set(style=\"darkgrid\")\n",
@@ -66,12 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
     "logger = logging.getLogger()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -100,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +205,10 @@
     "                                            cartopy_target_proj.proj4_params,\n",
     "                                            target_rows, target_cols,\n",
     "                                            target_extent)\n",
+    "        #Read up on recommend class \n",
+    "        #https://pyresample.readthedocs.io/en/latest/search.html?q=Numpy+Resampler+Bilinear&check_keywords\n",
+    "        \n",
+    "        #can suppress warning for long runs as to not generate an overload on the browser rendering .ipynb\n",
     "        geos_con_nn = image.ImageContainerNearest(rad, \n",
     "                                                source_area, \n",
     "                                                radius_of_influence=radius_of_influence)\n",
@@ -234,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,38 +269,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sat = 16\n",
-    "band = 8\n",
-    "year = 2020\n",
-    "month = 1\n",
-    "day = 1\n",
-    "hour = 1\n",
-    "\n",
     "# Sat = 16\n",
     "# band = 8\n",
     "# year = 2020\n",
-    "# month = 12\n",
-    "# day = 31\n",
-    "# hour = 24"
+    "# month = 1\n",
+    "# day = 1\n",
+    "# hour = 1\n",
+    "\n",
+    "Sat = 16\n",
+    "band = 8\n",
+    "year = 2020\n",
+    "month = 12\n",
+    "day = 31\n",
+    "hour = 24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(16, 8, 2020, 1, 1, 0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#search = itertools.product([Sat], [band], [year], [month], [day], [hour])\n",
     "#search = itertools.product([Sat], [band], [year], [month], [day], list(range(hour)))\n",
@@ -301,64 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n",
-      "/Users/ronaldadomako/miniconda3/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Set HDF5 locking to false. \n",
@@ -542,13 +493,6 @@
     "        fig.savefig(op.join(storage,f\"{yyyy}/GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}_{HH}{MM}{ss}_Band{bb}.png\"))\n",
     "filelog.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
