SoF based on G16 quantiles =f(G17)

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,15 +463,15 @@
     "            _G17 = np.linspace(G17.min(), G17.max(), xRange)\n",
     "            _G17n = (_G17 - min(_G17))/(max(_G17) - min(_G17))\n",
     "\n",
-    "            _G16 = np.linspace(G16.min(), G16.max(), xRange)\n",
-    "            _G16n = (_G16 - min(_G16))/(max(_G16) - min(_G16))\n",
-    "#             B = [st.scoreatpercentile(G16, st.percentileofscore(G17,g17s,\n",
-    "#                 kind='strict')) for g17s in _G17]\n",
+    "#             _G16 = np.linspace(G16.min(), G16.max(), xRange)\n",
+    "#             _G16n = (_G16 - min(_G16))/(max(_G16) - min(_G16))\n",
+    "            _G16 = [st.scoreatpercentile(G16, st.percentileofscore(G17,g17s,\n",
+    "                kind='strict')) for g17s in _G17]\n",
     "\n",
-    "#             _B = (B - min(B))/(max(B) - min(B))\n",
+    "            _G16n = (_G16 - min(_G16))/(max(_G16) - min(_G16))\n",
     "            \n",
     "            #y = f(x) is normalized and dx is represented by 1/xRange–a factorable constant interval\n",
-    "            AUC = round(sum(_G17n)/xRange,4)#Area under curve is sum of y * dx\n",
+    "            AUC = round(sum(_G16n)/xRange,4)#Area under curve is sum of y * dx\n",
     "            \n",
     "            ax4.plot(_G16n, _G17n, label=f\"AUC: {AUC}\")\n",
     "            ax4.legend(loc = 'upper left')\n",
