patch to check or skip file output in bins of an hour of data; refactor for local disk data to improve performance WIP

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/bilinear/__init__.py:50: UserWarning: XArray and/or zarr not found, XArrayBilinearResampler won't be available.\n",
-      "  warnings.warn(\"XArray and/or zarr not found, XArrayBilinearResampler won't be available.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import urllib.request\n",
     "from netCDF4 import Dataset\n",
@@ -61,7 +52,10 @@
     "from matplotlib.ticker import PercentFormatter\n",
     "\n",
     "import matplotlib.dates as mdates\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "\n",
+    "from convertdate import gregorian, ordinal\n",
+    "import glob"
    ]
   },
   {
@@ -307,18 +301,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'DDD' is not defined",
+     "evalue": "name 'YYYY' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-63f03c3899dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzfill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzfill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mcond1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{storage}/{yyyy}/GOES-R_panel_GOES16vsGOES17_FD_{yyyy}{DDD}_{HH}{MM}{ss}_Band{bb}.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcond1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mtemplateURL16\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/'\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'DDD' is not defined"
+      "\u001b[0;32m<ipython-input-120-d0bff8309eca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m             \u001b[0;34m'''Histograms'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m             \u001b[0max1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'GOES-16 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m             \u001b[0max1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_ylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'density'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#,fontsize = 16)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m             \u001b[0max1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_xlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Temperature (K)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#, fontsize = 16)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'YYYY' is not defined"
      ]
     }
    ],
@@ -353,9 +347,14 @@
     "    templateURL17 = f'http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/'\\\n",
     "        + f'goes16_download.cgi?source=aws&satellite='\\\n",
     "        + f'noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date={yyyy}-{mm}-{dd}&hour={hr}'\n",
-    "        \n",
-    "    cond1=os.path.isfile(f'{storage}/{yyyy}/GOES-R_panel_GOES16vsGOES17_FD_{yyyy}{DDD}_{HH}{MM}{ss}_Band{bb}.png')\n",
-    "    if not cond1:\n",
+    "    \n",
+    "    calDate = gregorian.date(int(yyyy), int(mm), int(dd))\n",
+    "    DDD = ordinal.from_gregorian(calDate.year, calDate.month, calDate.day)[1]\n",
+    "    \n",
+    "    #os.path.isfile() returs explicit T/F but doesn't support wild cards\n",
+    "    #glob.glob returns a list where [] is read as a False condition in python\n",
+    "    cond1=glob.glob(f'{storage}/{yyyy}/GOES-R_panel_GOES16vsGOES17_FD_{yyyy}{DDD}_{hr}*_Band{bb}.png')\n",
+    "    if len(cond1)!=6:\n",
     "        '''Get URLS for download'''\n",
     "        req16 = requests.get(templateURL16)\n",
     "        req17 = requests.get(templateURL17)\n",
