corrected spelling in image plot; new current samples

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/bilinear/__init__.py:50: UserWarning: XArray and/or zarr not found, XArrayBilinearResampler won't be available.\n",
+      "  warnings.warn(\"XArray and/or zarr not found, XArrayBilinearResampler won't be available.\")\n"
+     ]
+    }
+   ],
    "source": [
     "#import urllib.request\n",
     "from netCDF4 import Dataset\n",
@@ -267,19 +276,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sat = 16\n",
-    "# band = 8\n",
-    "# year = 2020\n",
-    "# month = 1\n",
-    "# day = 1\n",
-    "# hour = 1\n",
-    "\n",
     "Sat = 16\n",
     "band = 8\n",
     "year = 2020\n",
-    "month = 12\n",
-    "day = 31\n",
-    "hour = 24"
+    "month = 1\n",
+    "day = 1\n",
+    "hour = 1\n",
+    "\n",
+    "# Sat = 16\n",
+    "# band = 8\n",
+    "# year = 2020\n",
+    "# month = 12\n",
+    "# day = 31\n",
+    "# hour = 24"
    ]
   },
   {
@@ -301,21 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'YYYY' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-120-d0bff8309eca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m             \u001b[0;34m'''Histograms'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m             \u001b[0max1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'GOES-16 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m             \u001b[0max1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_ylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'density'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#,fontsize = 16)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m             \u001b[0max1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_xlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Temperature (K)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#, fontsize = 16)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'YYYY' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "Set HDF5 locking to false. \n",
@@ -430,7 +427,7 @@
     "            fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2, 2,figsize=(15,15))\n",
     "\n",
     "            '''Histograms'''\n",
-    "            ax1.set_title(f'GOES-16 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC')\n",
+    "            ax1.set_title(f'GOES-16 ABI Band {bb} (6.2µm) {mm}-{dd}-{yyyy} {HH}:{MM} UTC')\n",
     "            ax1.set_ylabel('density')#,fontsize = 16)\n",
     "            ax1.set_xlabel('Temperature (K)')#, fontsize = 16)\n",
     "            Tbox16 = Rad2BT(imageBox_16, planck_fk1_16, planck_fk2_16, planck_bc1_16, planck_bc2_16)\n",
@@ -441,7 +438,7 @@
     "            ax1.axis(ymin=0, ymax=0.25)# Check July 15, 2020, 197th day of the year       \n",
     "\n",
     "            if None != _FD17:\n",
-    "                ax2.set_title(f'GOES-17 ABI Band {bb} (6.2µm) {mm}-{dd}-{YYYY} {HH}:{MM} UTC')\n",
+    "                ax2.set_title(f'GOES-17 ABI Band {bb} (6.2µm) {mm}-{dd}-{yyyy} {HH}:{MM} UTC')\n",
     "                ax2.set_ylabel('density')#,fontsize = 16)\n",
     "                ax2.set_xlabel('Temperature (K)')#, fontsize = 16)\n",
     "                Tbox17 = Rad2BT(imageBox_17, planck_fk1_17, planck_fk2_17, planck_bc1_17, planck_bc2_17)\n",
@@ -457,7 +454,7 @@
     "                G17 = XY[1]\n",
     "                plabels = ['0%', '25%', '50%', '75%', '100%']\n",
     "\n",
-    "                f'''Empirical CDF {mm}-{dd}-{YYYY} {HH}:{MM} UTC'''\n",
+    "                f'''Empirical CDF {mm}-{dd}-{yyyy} {HH}:{MM} UTC'''\n",
     "                xticks = np.arange(len(G17))\n",
     "                xticks = [st.scoreatpercentile(xticks, p) for p in [0, 25, 50, 75, 100]]\n",
     "                ax3.plot(sorted(G17), label='G17',linewidth=None, alpha=0.5)\n",
@@ -492,7 +489,7 @@
     "                ax4.set_title('Transform of G17 to G16')\n",
     "                ax4.set_aspect('equal')\n",
     "                SoF = 1-2*abs(0.5-AUC)\n",
-    "                ax4.text(0, 0.75, f'Straigtness of Fit \\n (SoF): {round(100*SoF,2)}%', style='italic',\n",
+    "                ax4.text(0, 0.75, f'Straightness of Fit \\n (SoF): {round(100*SoF,2)}%', style='italic',\n",
     "                bbox={'alpha': 0.5, 'pad': 10})\n",
     "\n",
     "            fig.suptitle('Ronald O.S. Adomako, City College of New York, NOAA-CESSRST', fontsize=12)\n",
@@ -505,7 +502,7 @@
     "                pid = Popen(cmd, shell=True) \n",
     "                pid.communicate()\n",
     "\n",
-    "            fig.savefig(op.join(storage,f\"{yyyy}/GOES-R_panel_GOES16vsGOES17_FD_{YYYY}{DDD}_{HH}{MM}{ss}_Band{bb}.png\"))\n",
+    "            fig.savefig(op.join(storage,f\"{yyyy}/GOES-R_panel_GOES16vsGOES17_FD_{yyyy}{DDD}_{HH}{MM}{ss}_Band{bb}.png\"))\n",
     "filelog.close()"
    ]
   }
