--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -30,7 +30,7 @@
    ],
    "source": [
     "#import urllib.request\n",
-    "from netCDF4 import Dataset\n",
+    "#from netCDF4 import Dataset\n",
     "import h5py\n",
     "import numpy as np\n",
     "import scipy.stats as st\n",
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "#warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,28 +272,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sat = 16\n",
-    "band = 8\n",
-    "year = 2020\n",
-    "month = 1\n",
-    "day = 1\n",
-    "hour = 1\n",
+    "# Sat = 16\n",
+    "# band = 8\n",
+    "# year = 2020\n",
+    "# month = 1\n",
+    "# day = 1\n",
+    "# hour = 1\n",
     "\n",
     "# Sat = 16\n",
     "# band = 8\n",
     "# year = 2020\n",
     "# month = 12\n",
     "# day = 31\n",
-    "# hour = 24"
+    "# hour = 24\n",
+    "\n",
+    "Sat = 16\n",
+    "band = 8\n",
+    "year = 2021\n",
+    "month = [2]\n",
+    "day = 31\n",
+    "hour = 24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +309,7 @@
     "search = list(itertools.product([Sat],\\\n",
     "        [band],\\\n",
     "        [year],\\\n",
-    "        list(range(month+1)[1:]),\\\n",
+    "        month,\\\n",
     "        list(range(day+1)[1:]),\\\n",
     "        list(range(hour))))\n",
     "#print(search)"
@@ -310,9 +317,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n",
+      "/home/radomako/.conda/envs/adomako/lib/python3.9/site-packages/pyresample/image.py:60: FutureWarning: Usage of ImageContainer is deprecated, please use NumpyResamplerBilinear class instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Set HDF5 locking to false. \n",
