--- a/GOES-R_imageFD.ipynb
+++ b/GOES-R_imageFD.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "organizational-replication",
+   "metadata": {},
+   "source": [
+    "https://gitlab.com/adomakor412/goes-r_fd_image"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "thrown-destiny",
    "metadata": {},
    "outputs": [],
@@ -20,9 +28,42 @@
     "from datetime import datetime, timedelta\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "from mpl_toolkits.basemap import Basemap\n",
-    "\n"
+    "from pathlib import Path\n",
+    "\n",
+    "import warnings\n",
+    "#warnings.filterwarnings('ignore')\n",
+    "\n",
+    "import logging\n",
+    "logger = logging.getLogger()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "chief-intent",
+   "metadata": {},
+   "source": [
+    "## Paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "whole-extent",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storage = Path('../goes-r_fd_image/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "exempt-favorite",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
