Kelvin, parallel process WIP,Movie-loop WIP, color bar WIP

--- a/GOES-R_imageFD.ipynb
+++ b/GOES-R_imageFD.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "thrown-destiny",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "prescribed-banks",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "weird-virginia",
    "metadata": {},
    "outputs": [],
@@ -343,17 +343,34 @@
     "            GOES_image = GOES_R['Rad']\n",
     "            \n",
     "            #Call pixelage before rendering\n",
-    "            plt.figure(figsize=(resolution/my_dpi, resolution/my_dpi), dpi=my_dpi)\n",
+    "            #plt.figure(figsize=(resolution/my_dpi, resolution/my_dpi), dpi=my_dpi)\n",
     "            \n",
-    "            fig1 = plt.imshow(GOES_image)\n",
+    "            planck_fk1 = float(GOES_R['planck_fk1'].data)\n",
+    "            planck_fk2 = float(GOES_R['planck_fk2'].data) \n",
+    "            planck_bc1 = float(GOES_R['planck_bc1'].data)                       \n",
+    "            planck_bc2 = float(GOES_R['planck_bc2'].data)\n",
+    "            #No need to convert projection: using full image, no pyproj interpolation of region of interest\n",
+    "            Kelvin_GOES_image = Rad2BT(GOES_image, planck_fk1, planck_fk2, planck_bc1, planck_bc2)\n",
+    "            \n",
+    "            fig1 = plt.imshow(Kelvin_GOES_image, interpolation='none', vmin = 180, vmax = 300)\n",
+    "            #fig1 = plt.imshow(Kelvin_GOES_image, cmap='Greys', interpolation='none', vmin = 180, vmax=300)\n",
+    "            \n",
+    "            #fig1 = plt.imshow(GOES_image)\n",
     "            plt.grid(None) #Call after the imshow, redraws\n",
     "            plt.axis('off')#Call after the imshow, redraws; \"layer\" to previous drawing\n",
+    "            \n",
+    "            title = f'Full Disk GOES-{SS} Image'\n",
+    "            fig1.title(f\"{title} Band{bb} \\n Date {mm}-{dd}, Year {yyyy} \\n, Day {DDD}, Time {HH}:{MM}:{ss}\",\\\n",
+    "                       fontsize=\"x-large\",\\ \n",
+    "                       fontweight='bold')\n",
+    "            \n",
     "            \n",
     "            naming = f'{yyyy}/goes{SS}_B{bb}_{yyyy}-{mm}-{dd}_{DDD}_{HH}{MM}{ss}UTC_5424x5424.png'\n",
     "            if not os.path.isfile(naming):\n",
     "                fig1.figure.savefig(op.join(storage,naming))\n",
     "            \n",
     "            plt.close('all')\n",
+    "            GOES_R.close()\n",
     "            \n",
     "    except ValueError as e:\n",
     "        print('THERE IS AN ERROR')\n",
